--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-masonry-css": "^1.0.16",
+    "react-modal-image": "^2.5.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
