--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-helmet": "^6.1.0",
     "react-masonry-css": "^1.0.16",
     "react-modal-image": "^2.5.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
